force-app/main/default/objects/Salesforce_Career_Path_Settings__mdt/Salesforce_Career_Path_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Salesforce Career Path Settings</label>
    <pluralLabel>Salesforce Career Path Settings</pluralLabel>
</CustomObject>