force-app/main/default/objects/Salesforce_Career_Path_Settings__mdt/fields/Actitud_Required_follow_up_Mentoring__c.field-meta.xml
<CustomField>
    <fullName>Actitud_Required_follow_up_Mentoring__c</fullName>
    <label>Actitud Required follow-up Mentoring</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>