force-app/main/default/objects/Salesforce_Career_Path_Settings__mdt/fields/Functional_knowledge__c.field-meta.xml
<CustomField>
    <fullName>Functional_knowledge__c</fullName>
    <label>Functional knowledge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>