force-app/main/default/objects/Salesforce_Career_Path_Settings__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>