force-app/main/default/objects/Salesforce_Career_Path_Settings__mdt/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>