force-app/main/default/objects/Salesforce_Career_Path_Settings__mdt/fields/Soft_skills__c.field-meta.xml
<CustomField>
    <fullName>Soft_skills__c</fullName>
    <label>Soft skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>