force-app/main/default/objects/Salesforce_Career_Path_Settings__mdt/fields/Technical_knowledge__c.field-meta.xml
<CustomField>
    <fullName>Technical_knowledge__c</fullName>
    <label>Technical knowledge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>